# Logger

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: ci.yml
cmake/: fmt.cmake  spdlog.cmake
include/torchcs/spdlog/: color_code_formatter.hpp  file_sink.hpp  log_color.hpp  log_level.hpp  spdlog_provider.hpp
include/torchcs/spdlog/enums/: log_level.hpp
include/torchcs/spdlog/interfaces/: IFormatter.hpp  IProvider.hpp
include/torchcs/spdlog/sinks/: console_sink.hpp  file_sink.hpp
include/torchcs_logger/: anti_color_code_formatter.hpp  console_sink.hpp  custom_file_formatter.hpp  custom_formatter.hpp  file_sink.hpp  level_formatter.hpp  log_color.hpp  log_level.hpp  logger_manager.hpp  logger_options.hpp  spdlog_provider.hpp
include/torchcs_logger/interfaces/: IFormatter.hpp  IProvider.hpp
sample/: CMakeLists.txt
sample/src/: main.cpp
src/: anti_color_code_formatter.cpp  color_code_formatter.cpp  console_sink.cpp  custom_file_formatter.cpp  custom_formatter.cpp  file_sink.cpp  level_formatter.cpp  log_color.cpp  logger_manager.cpp  logger_options.cpp  spdlog_provider.cpp
src/formatter/: anti_color_code_formatter.cpp  anti_color_code_formatter.hpp  color_code_formatter.cpp  color_code_formatter.hpp  level_formatter.cpp  level_formatter.hpp
src/interfaces/: IFormatter.hpp  IProvider.hpp
src/sinks/: console_sink.cpp  file_sink.cpp
tests/your_project/: CMakeLists.txt
tests/your_project/src/: main.cpp
